--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -344,7 +344,7 @@ analytic_data_between %>%
   psych::describe()
 ```
 
-```{r, echo = FALSE}
+```{r, eval = FALSE}
 output <- analytic_data_between %>%
   select(where(is.numeric)) %>%
   as.data.frame() %>%
